cloud-infrastructure-operations-lab/kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: northstar-api, namespace: northstar-prod }
spec:
  replicas: 3
  strategy: { type: RollingUpdate, rollingUpdate: { maxUnavailable: 0, maxSurge: 1 } }
  selector: { matchLabels: { app: northstar-api } }
  template:
    metadata: { labels: { app: northstar-api } }
    spec:
      securityContext: { runAsNonRoot: true, seccompProfile: { type: RuntimeDefault } }
      containers:
        - name: api
          image: nginx:1.27-alpine
          ports: [{ containerPort: 8080 }]
          command: ["/bin/sh","-c"]
          args: ["sed -i 's/listen       80;/listen       8080;/' /etc/nginx/conf.d/default.conf && echo healthy >/usr/share/nginx/html/health && nginx -g 'daemon off;'"]
          resources: { requests: { cpu: 100m, memory: 128Mi }, limits: { cpu: 500m, memory: 256Mi } }
          readinessProbe: { httpGet: { path: /health, port: 8080 }, initialDelaySeconds: 5, periodSeconds: 10 }
          livenessProbe: { httpGet: { path: /health, port: 8080 }, initialDelaySeconds: 15, periodSeconds: 20 }
          securityContext: { allowPrivilegeEscalation: false, readOnlyRootFilesystem: false, capabilities: { drop: ["ALL"] } }
